[gd_scene load_steps=5 format=3 uid="uid://fl361p7m4un4"]

[ext_resource type="Script" path="res://market_1.gd" id="1_wrtdm"]
[ext_resource type="Texture2D" uid="uid://cn12xr624sum1" path="res://assets/market_1.png" id="2_imxvj"]
[ext_resource type="Texture2D" uid="uid://cki86bkuct6fg" path="res://assets/market_1_shadow.png" id="3_flyxt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pwfl3"]
size = Vector2(339, 165)

[node name="market_1" type="Area2D"]
z_index = 1
script = ExtResource("1_wrtdm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(9.5, -7.5)
shape = SubResource("RectangleShape2D_pwfl3")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1
scale = Vector2(0.15, 0.15)
texture = ExtResource("2_imxvj")

[node name="Sprite2D2" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.15, 0.15)
texture = ExtResource("3_flyxt")

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color(1, 1, 1, 0)
polygon = PackedVector2Array(74, -90, 93, -90, 93, -13, 127, -13, 125, -86, 163, -86, 163, 53, 71, 54, 49, 59, 0, 54, -25, 75, -161, 75, -178, 37, -177, 23, -160, -15, -130, -42, -99, -42, -99, 31, -55, 31, -54, -35, -10, -35, -6, -69, 58, -69)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
